--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.16.6",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.14",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
